# daru_mujoco

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/daru_mujoco/: daru_v4_rbdl.hpp  package_paths.hpp
include/daru_mujoco/gr00t_infer/: daru_v4_mujoco_gr00t_infer_controller.hpp  daru_v4_mujoco_gr00t_infer_gui.hpp  daru_v4_mujoco_gr00t_infer_ros.hpp
include/daru_mujoco/teleop/: daru_v4_mujoco_teleop_controller.hpp  daru_v4_mujoco_teleop_gui.hpp  daru_v4_mujoco_teleop_ros.hpp
resource/textures/ui/: README.md
src/: daru_v4_rbdl.cpp  package_paths.cpp
src/gr00t_infer/: daru_v4_mujoco_gr00t_infer_controller.cpp  daru_v4_mujoco_gr00t_infer_gui.cpp  daru_v4_mujoco_gr00t_infer_main.cpp  daru_v4_mujoco_gr00t_infer_ros.cpp
src/teleop/: daru_v4_mujoco_teleop_controller.cpp  daru_v4_mujoco_teleop_gui.cpp  daru_v4_mujoco_teleop_main.cpp  daru_v4_mujoco_teleop_ros.cpp
urdf/: DARU_V4.urdf  cloth_body.xml
urdf/DARU_NEW_260323/: DARU_NEW_260323.urdf  DARU_NEW_260323.xml  DARU_NEW_260323_hands.xml  DARU_NEW_260323_hands_pos.xml  DARU_NEW_260323_position.xml  DARU_NEW_260323_torque.xml  scene.xml
urdf/DARU_NEW_260323/meshes/: Base.STL  HP_Link.STL  HY_Link.STL  LEP_Link.STL  LEY_Link.STL  LSP_Link.STL  LSR_Link.STL  LSY_Link.STL  LWP_Link.STL  LWR_Link.STL  REP_Link.STL  REY_Link.STL  RSP_Link.STL  RSR_Link.STL  RSY_Link.STL  RWP_Link.STL  RWR_Link.STL
urdf/DARU_NEW_260323/textures/: cube_puzzle.ppm
urdf/ROUGH_L/: ROUGH_L.xml  ROUGH_L_case_module.xml  ROUGH_L_finger_module.xml  ROUGH_L_finger_t_2_module.xml  ROUGH_L_finger_thumb_module.xml  ROUGH_L_pos.xml  mirror_rough_to_left.py
urdf/ROUGH_L/ROUGH_L_case/meshes/: Base_Link.STL
urdf/ROUGH_L/ROUGH_L_finger/meshes/: Base_Link.STL  Link_1.STL  Link_1_1.STL  Link_2.STL  Link_3.STL  Link_3_1.STL  Link_4.STL  Link_5_1.STL  Link_5_old.STL  Motor_Linear_Link.STL  Motor_Link.STL
urdf/ROUGH_L/ROUGH_L_finger_t_2/meshes/: Base_Link.STL  Link_1.STL  Link_1_1.STL  Motor_Linear_Link.STL  Motor_Link.STL
urdf/ROUGH_L/ROUGH_L_finger_thumb/meshes/: Base_Link.STL  Link_1.STL  Link_1_1.STL  Link_2.STL  Link_2_1.STL  Link_3_old.STL  Motor_Linear_Link.STL  Motor_Link.STL
urdf/ROUGH_R/: ROUGH_R.xml  ROUGH_R_case_module.xml  ROUGH_R_finger_module.xml  ROUGH_R_finger_t_2_module.xml  ROUGH_R_finger_thumb_module.xml  ROUGH_R_pos.xml
urdf/ROUGH_R/ROUGH_R_case/meshes/: Base_Link.STL
urdf/ROUGH_R/ROUGH_R_finger/meshes/: Base_Link.STL  Link_1.STL  Link_1_1.STL  Link_2.STL  Link_3.STL  Link_3_1.STL  Link_4.STL  Link_5.STL  Link_5_1.STL  Link_5_old.STL  Motor_Linear_Link.STL  Motor_Link.STL
urdf/ROUGH_R/ROUGH_R_finger_t_2/meshes/: Base_Link.STL  Link_1.STL  Link_1_1.STL  Motor_Linear_Link.STL  Motor_Link.STL
urdf/ROUGH_R/ROUGH_R_finger_thumb/meshes/: Base_Link.STL  Link_1.STL  Link_1_1.STL  Link_2.STL  Link_2_1.STL  Link_3.STL  Link_3_old.STL  Motor_Linear_Link.STL  Motor_Link.STL
urdf/furniture_sim/kettle/: kettle_asset.xml
urdf/furniture_sim/microwave/: microwave_asset.xml
urdf/furniture_sim/simpleTable/: simpleTable_asset.xml
